
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int uint8_t ;
typedef scalar_t__ uint16_t ;
struct timeval {unsigned int tv_sec; scalar_t__ tv_usec; } ;
struct TYPE_3__ {long s_addr; } ;
struct sockaddr_in {void* class; void* type; int query; void* questions; void* flags; scalar_t__ transaction_id; int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
struct TYPE_4__ {int names; } ;
typedef TYPE_2__ nbt_name_query_answer ;
typedef struct sockaddr_in nbt_name_query ;
typedef int fd_set ;


 int AF_INET ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int SOCK_DGRAM ;
 void* bswap16 (int) ;
 int errno ;
 int fprintf (int ,char*,...) ;
 struct hostent* gethostbyname (char const*) ;
 int htons (unsigned short) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int name_mangle (char*,int ,int ) ;
 int printf (char*,...) ;
 int recvfrom (int,unsigned char*,size_t,int ,int *,int *) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int sendto (int,struct sockaddr_in*,int,int ,struct sockaddr*,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 char* strerror (int ) ;

char *
list_netbios_names (unsigned char *buffer, size_t size, const char *rhost,
                    unsigned short port, unsigned int timeout)
{
  nbt_name_query query;
  struct sockaddr_in dest;
  struct hostent *host;
  int fd, i;

  fd_set rfds;
  struct timeval tv;

  printf ("Trying to list netbios names on %s\n", rhost);

  host = gethostbyname (rhost);
  if (host == ((void*)0))
    {
      fprintf (stderr, "Could not resolve host: %s\n", rhost);
      return ((void*)0);
    }

  memset (&dest, 0, sizeof (struct sockaddr_in));

  dest.sin_family = AF_INET;
  dest.sin_addr.s_addr = *(long *) (host->h_addr);
  dest.sin_port = htons (port);

  if ((fd = socket (AF_INET, SOCK_DGRAM, 0)) < 0)
    {
      fprintf (stderr, "Could not setup the UDP socket: %s\n",
               strerror (errno));
      return ((void*)0);
    }

  memset (&query, 0, sizeof (nbt_name_query));

  query.transaction_id = (uint16_t) bswap16 (0x1e);
  query.flags = bswap16 (0x0010);
  query.questions = bswap16 (1);

  name_mangle ("*", query.query, 0);
  query.type = bswap16 (0x21);
  query.class = bswap16 (0x01);

  if (sendto
      (fd, &query, sizeof (nbt_name_query), 0, (struct sockaddr *) &dest,
       sizeof (struct sockaddr_in)) != sizeof (nbt_name_query))
    {
      fprintf (stderr, "Could not send UDP packet: %s\n", strerror (errno));
      return ((void*)0);
    }



  FD_ZERO (&rfds);
  FD_SET (fd, &rfds);

  tv.tv_sec = timeout;
  tv.tv_usec = 0;

  if (!select (fd + 1, &rfds, ((void*)0), ((void*)0), &tv))
    {
      fprintf (stderr,
               "The udp read has reached the timeout - try setting the netbios name manually - exiting...\n");
      return ((void*)0);
    }

  recvfrom (fd, buffer, size, 0, ((void*)0), ((void*)0));

  for (i = 0; i < ((nbt_name_query_answer *) buffer)->names; i++)
    if ((uint8_t) * (buffer + sizeof (nbt_name_query_answer) + 18 * i + 15) ==
        0x20)
      return buffer + sizeof (nbt_name_query_answer) + 18 * i;

  printf ("No netbios name available for use - you probably won't be able to crash this host\n");
  printf ("However, you can try setting one manually\n");

  return ((void*)0);
}
